@@ -1,4 +1,4 @@
 DIST maven-error-diagnostics-2.0.tar.bz2 6919 RMD160 3b9021de3aa6acdad65c4a7422a2f83c97c9b9e4 SHA1 242a237fcea6043efa59eda9cb6ec038a1f7e4b4 SHA256 e898ef0dd628037fddabab3839f7697f74a4ba567bbb62fe4873ca41ccef85c5
-EBUILD maven-error-diagnostics-2.0.ebuild 567 RMD160 0401569c23a9555e0672562740d711938d898667 SHA1 cad83e33d6c0279728a518b62c9eb75d62cab4c5 SHA256 5505257aa1cff9a179d52ef2f4ea8470e12f79fee54f2cc6f0272a3cb2835690
-MISC ChangeLog 275 RMD160 972d686eb3b55be8b05fa1da705aaf8d8fe246c5 SHA1 32f9816203dd68660dd3b64f842be84e516b5b1c SHA256 7bfd43c75eee9b73f47dd60f6b909565b0fa78f621f497bd4854495410adf7ca
+EBUILD maven-error-diagnostics-2.0.ebuild 591 RMD160 343fc61dd81d4e59f310b974bede331da8c85d2d SHA1 722c7e9501c3d6c31b254a87cef9869e546ecc23 SHA256 3170b077263ed28dc0f362d0d532cdb6239c710590110937190b1ca291d89958
+MISC ChangeLog 390 RMD160 a52cfe959b54cbdc5b1d9e9330caca8cdf5139a6 SHA1 b90af8b9ce80cd10eb519ec204907fe4925dc89c SHA256 5a1323fbd96a8eb315016c7de1391d0497a03abc51235f494d10e9a286ac73a9
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
