@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  19 May 2007; Alistair John Bush <ali_bush@gentoo.org>
+  maven-error-diagnostics-2.0.ebuild:
+  Adding to ~amd64.
+
   01 May 2007; kiorky <kiorky@cryptelium.net>
   +maven-error-diagnostics-2.0.6.ebuild, +metadata.xml:
   Added as a maven dependency, #177479
